; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_color_tree_has.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_color_tree_has.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8, i8, i8, i8)* @color_tree_has to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @color_tree_has(i32* %0, i8 zeroext %1, i8 zeroext %2, i8 zeroext %3, i8 zeroext %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8, align 1
  %8 = alloca i8, align 1
  %9 = alloca i8, align 1
  %10 = alloca i8, align 1
  store i32* %0, i32** %6, align 8
  store i8 %1, i8* %7, align 1
  store i8 %2, i8* %8, align 1
  store i8 %3, i8* %9, align 1
  store i8 %4, i8* %10, align 1
  %11 = load i32*, i32** %6, align 8
  %12 = load i8, i8* %7, align 1
  %13 = load i8, i8* %8, align 1
  %14 = load i8, i8* %9, align 1
  %15 = load i8, i8* %10, align 1
  %16 = call i64 @color_tree_get(i32* %11, i8 zeroext %12, i8 zeroext %13, i8 zeroext %14, i8 zeroext %15)
  %17 = icmp sge i64 %16, 0
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i64 @color_tree_get(i32*, i8 zeroext, i8 zeroext, i8 zeroext, i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
